[gd_scene load_steps=9 format=3 uid="uid://7l1ml4cm4lb2"]

[ext_resource type="Script" path="res://scripts/enemy/robot_boss.gd" id="1_160wv"]
[ext_resource type="Texture2D" uid="uid://bcomfrhiqemfv" path="res://assets/player/player_sprite.png" id="2_pelfv"]
[ext_resource type="AudioStream" uid="uid://bd7wrs0n0m01n" path="res://assets/sound/enemy/mixkit-air-in-a-hit-2161.mp3" id="3_twx50"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvu14"]
radius = 33.0606

[sub_resource type="Animation" id="Animation_574dt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_27yjj"]
resource_name = "walk"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.174533, 0.0, 0.174533, 0.0, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sxq07"]
_data = {
"RESET": SubResource("Animation_574dt"),
"walk": SubResource("Animation_27yjj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pw3hx"]
radius = 45.0111

[node name="RobotBoss" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(502, 301)
collision_layer = 8
collision_mask = 11
floor_stop_on_slope = false
floor_constant_speed = true
floor_block_on_wall = false
safe_margin = 0.1
script = ExtResource("1_160wv")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cvu14")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.275554, 0.19815, 1)
scale = Vector2(0.075, 0.075)
texture = ExtResource("2_pelfv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_sxq07")
}

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="QueueFreeTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="DamageCollider" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_pw3hx")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LostHeatlhSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_twx50")

[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_queue_free_timer_timeout"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="area_shape_entered" from="DamageArea" to="." method="_on_damage_area_area_shape_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
